[gd_scene load_steps=5 format=2]

[ext_resource path="res://Src/Light/Light.gd" type="Script" id=1]
[ext_resource path="res://Assets/Light/Lamp2.png" type="Texture" id=2]
[ext_resource path="res://Assets/Light/LightWide5.png" type="Texture" id=3]
[ext_resource path="res://Assets/Tileset/Rooms.png" type="Texture" id=4]

[node name="Light5Small" type="Node2D" groups=[
"Light",
]]
script = ExtResource( 1 )
flickerSequence = "111000"

[node name="TestSprite" type="Sprite" parent="."]
visible = false
modulate = Color( 0.815686, 0.815686, 0.815686, 1 )
light_mask = 3
position = Vector2( 0, 120 )
texture = ExtResource( 4 )

[node name="FullLight" type="Area2D" parent="." groups=[
"FullLight",
]]
visible = false
monitoring = false
collision_layer = 2
collision_mask = 2

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="FullLight"]
polygon = PoolVector2Array( -8, 0, -23, 55, 23, 55, 8, 0 )

[node name="BarelyVisible" type="Area2D" parent="." groups=[
"BarelyVisible",
]]
visible = false
monitoring = false
collision_layer = 2
collision_mask = 2

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="BarelyVisible"]
polygon = PoolVector2Array( -32, 55, -23, 55, -8, 0 )

[node name="CollisionPolygon2D2" type="CollisionPolygon2D" parent="BarelyVisible"]
position = Vector2( 103.758, -2.62204 )
polygon = PoolVector2Array( -95.758, 2.62204, -80.758, 57.622, -70.758, 57.622 )

[node name="Light2D" type="Light2D" parent="."]
position = Vector2( 0, 3 )
texture = ExtResource( 3 )
offset = Vector2( 0, 17 )
color = Color( 1, 0.988235, 0.682353, 1 )
energy = 0.8
range_item_cull_mask = 2
shadow_color = Color( 0, 0, 0, 1 )
shadow_item_cull_mask = -2147483646

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, 4 )
texture = ExtResource( 2 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.2
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout" flags=3]
